--- a/theme.css
+++ b/theme.css
@@ -1,36 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
-* {
-    box-sizing: border-box;
-}
+
+* { box-sizing: border-box; }
 
 body {
-    font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-size: 16px;
-    color: #2c3e50;
-    background: #2c3e50;
+	background: #2c3e50;
+	font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
+	font-size: 16px;
+	color: #2c3e50;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-hr {
-    margin: 1rem 0;
-}
+hr { margin: 1rem 0; }
 
 strong,
-.bold {
-    font-weight: 500;
-}
+.bold { font-weight: 500; }
 
 ol,
 p,
 ul {
-    line-height: 1.7;
+	line-height: 1.7;
 }
 
 a {
-    color: #3eaf7c;
-    font-weight: 500;
-    text-decoration: none;
+	font-weight: 500;
+	text-decoration: none;
+	color: #3eaf7c;
 }
 
 h1,
@@ -39,368 +34,359 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 500;
-    line-height: 1.45;
+	font-weight: 500;
+	line-height: 1.45;
 }
 
 h1 {
-    font-size: 2.2rem;
-    font-weight: 600;
+	font-size: 2.2rem;
+	font-weight: 600;
 }
 
 h2 {
-    font-size: 1.65rem;
-    padding-bottom: 0.3rem;
-    border-bottom: 1px solid #eaecef;
+	border-bottom: 1px solid #eaecef;
+	font-size: 1.65rem;
+	padding-bottom: 0.3rem;
 }
 
 h3 {
-    font-size: 1.35rem;
+	font-size: 1.35rem;
 }
 
+.primary {
+	color: #42b983;
+}
 
-/*.primary {*/
-
-
-/*    color: #42b983;*/
-
-
-/*}*/
-
-
-/*.danger {*/
-
-
-/*    color: #e53935;*/
-
-
-/*}*/
+.danger {
+	color: #e53935;
+}
 
 .btn {
-    color: #42b983;
-    position: relative;
-    place-content: center;
-    place-items: center;
-    width: fit-content;
-    border-radius: 99px;
-    letter-spacing: 0.05em;
-    border: 1px solid #42b983;
-    text-decoration: none;
-    text-transform: uppercase;
-    margin-right: 10px;
-    padding: 0.5rem 1.5rem;
-    white-space: nowrap;
-    font-weight: 700;
-    outline: none;
-    background: #fff;
-    transition: all 0.22s;
+	background: #fff;
+	border: 1px solid #42b983;
+	border-radius: 99px;
+	font-weight: 700;
+	transition: all 0.22s;
+	white-space: nowrap;
+	text-decoration: none;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	color: #42b983;
+	outline: none;
+	position: relative;
+	margin-right: 10px;
+	padding: 0.5rem 1.5rem;
+	width: fit-content;
+	place-content: center;
+	place-items: center;
 }
 
 .btn:hover {
-    cursor: pointer;
-    opacity: 0.8;
+	cursor: pointer;
+	opacity: 0.8;
 }
 
 .btn:disabled {
-    cursor: not-allowed;
-    opacity: 1!important;
-    background: #eee!important;
-    border-color: #ddd!important;
-    color: #999!important;
+	background: #eee !important;
+	border-color: #ddd !important;
+	cursor: not-allowed;
+	opacity: 1 !important;
+	color: #999 !important;
 }
 
 .btn:active {
-    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .btn.primary {
-    background: #42b983;
-    color: #fff;
+	background: #42b983;
+	color: #fff;
 }
 
 .btn.danger {
-    background: #e53935;
-    color: #fff;
-    border-color: #e53935;
+	background: #e53935;
+	border-color: #e53935;
+	color: #fff;
 }
 
 .btn.warning {
-    background: #c25205;
-    color: #fff;
-    border-color: #c25205;
+	background: #c25205;
+	border-color: #c25205;
+	color: #fff;
 }
 
 .container {
-    margin: 0 auto;
-    max-width: 800px;
+	margin: 0 auto;
+	max-width: 800px;
 }
 
 .container.with-nav {
-    margin-top: 70px;
+	margin-top: 70px;
 }
 
 .pt-2 {
-    padding-top: 2rem;
+	padding-top: 2rem;
 }
 
 .pt-1 {
-    padding-top: 1rem;
+	padding-top: 1rem;
 }
 
 .pt-5 {
-    padding-top: 5rem;
+	padding-top: 5rem;
 }
 
 .form-control {
-    position: relative;
-    margin-bottom: 0.5rem;
+	position: relative;
+	margin-bottom: 0.5rem;
 }
 
 .form-control input,
 .form-control select {
-    margin: 0;
-    outline: none;
-    border: 2px solid #ccc;
-    display: block;
-    width: 100%;
-    color: #2c3e50;
-    padding: 0.5rem 1.5rem;
-    border-radius: 3px;
-    font-size: 1rem;
+	display: block;
+	border: 2px solid #ccc;
+	border-radius: 3px;
+	font-size: 1rem;
+	color: #2c3e50;
+	outline: none;
+	margin: 0;
+	padding: 0.5rem 1.5rem;
+	width: 100%;
 }
 
 .form-control small {
-    color: #e53935;
+	color: #e53935;
 }
 
 .form-control.invalid input {
-    border-color: #e53935;
+	border-color: #e53935;
 }
 
 .form-checkbox {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .form-checkbox .label {
-    display: block;
-    margin: 0 0 0.3rem 0.3rem;
-    font-weight: 500;
+	display: block;
+	font-weight: 500;
+	margin: 0 0 0.3rem 0.3rem;
 }
 
 .form-checkbox .checkbox input {
-    margin-right: 1rem;
+	margin-right: 1rem;
 }
 
 .form-control label {
-    display: block;
-    margin: 0 0 0.3rem 0.3rem;
-    font-weight: 500;
+	display: block;
+	font-weight: 500;
+	margin: 0 0 0.3rem 0.3rem;
 }
 
 .form-control input:active,
 .form-control input:focus {
-    transition: border 0.22s;
-    border: 2px solid #42b983;
+	border: 2px solid #42b983;
+	transition: border 0.22s;
 }
 
 .card {
-    overflow: hidden;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 10px;
-    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
-    background: #fff;
+	background: #fff;
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	overflow: hidden;
+	margin-bottom: 1rem;
+	padding: 1rem;
 }
 
 .card.marked {
-    border: 4px solid #42b983;
+	border: 4px solid #42b983;
 }
 
 .card.center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 
 .list {
-    margin: 0 0 0 2em;
-    padding: 0;
-    list-style: none;
+	list-style: none;
+	margin: 0 0 0 2em;
+	padding: 0;
 }
 
 .list-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 0;
-    transition: .22s all;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	overflow: hidden;
+	transition: .22s all;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	padding: 0.5rem 0;
 }
 
 .list-item:hover {
-    background: #eee;
+	background: #eee;
 }
 
 .alert {
-    padding: 1rem 1.5rem;
-    border-left-width: .5rem;
-    border-left-style: solid;
-    margin: 1rem 0;
-    position: relative;
-    border-bottom-right-radius: 2px;
-    border-top-right-radius: 2px;
+	border-left-width: .5rem;
+	border-left-style: solid;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+	position: relative;
+	margin: 1rem 0;
+	padding: 1rem 1.5rem;
 }
 
 .alert.primary {
-    border-color: #42b983;
-    background-color: #f8f8f8;
+	background-color: #f8f8f8;
+	border-color: #42b983;
 }
 
 .alert.danger {
-    border-color: #e53935;
-    background-color: #f8f8f8;
+	background-color: #f8f8f8;
+	border-color: #e53935;
 }
 
 .alert.warning {
-    border-color: #c25205;
-    background-color: #f8f8f8;
+	background-color: #f8f8f8;
+	border-color: #c25205;
 }
 
 .alert p {
-    color: #222;
-    line-height: 1.7;
+	line-height: 1.7;
+	color: #222;
 }
 
 .alert-title {
-    text-transform: uppercase;
-    font-weight: 600;
-    margin-bottom: -.4rem;
-    color: #222;
+	font-weight: 600;
+	text-transform: uppercase;
+	color: #222;
+	margin-bottom: -.4rem;
 }
 
 .modal {
-    position: fixed;
-    top: 60px;
-    width: 600px;
-    padding: 1rem;
-    background: #fff;
-    z-index: 1000;
-    left: 50%;
-    border-radius: 10px;
-    transform: translateX(-50%);
-    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+	background: #fff;
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	transform: translateX(-50%);
+	position: fixed;
+	top: 60px;
+	left: 50%;
+	padding: 1rem;
+	width: 600px;
+	z-index: 1000;
 }
 
 .modal-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, .35);
+	background: rgba(0, 0, 0, .35);
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 .loader {
-    font-size: 10px;
-    margin: 50px auto;
-    text-indent: -9999em;
-    width: 11em;
-    height: 11em;
-    border-radius: 50%;
-    background: #ffffff;
-    background: -moz-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-    background: -webkit-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-    background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-    background: -ms-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-    background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
-    position: relative;
-    -webkit-animation: load3 1.4s infinite linear;
-    animation: load3 1.4s infinite linear;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
+	background: #fff;
+	background: -moz-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -webkit-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+	background: -ms-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+	background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+
+	border-radius: 50%;
+	font-size: 10px;
+	-ms-transform: translateZ(0);
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-animation: load3 1.4s infinite linear;
+	animation: load3 1.4s infinite linear;
+	text-indent: -9999em;
+	position: relative;
+	margin: 50px auto;
+	width: 11em;
+	height: 11em;
 }
 
 .loader:before {
-    width: 50%;
-    height: 50%;
-    background: #ffffff;
-    border-radius: 100% 0 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
+	background: #ffffff;
+	border-radius: 100% 0 0 0;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 50%;
 }
 
 .loader:after {
-    background: #2c3e50;
-    width: 75%;
-    height: 75%;
-    border-radius: 50%;
-    content: '';
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+	background: #2c3e50;
+	border-radius: 50%;
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	width: 75%;
+	height: 75%;
 }
 
 @-webkit-keyframes load3 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
 
 @keyframes load3 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
 
 .navbar {
-    display: flex;
-    padding: 0 2rem;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 20;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 56px;
-    background-color: #fff;
-    box-sizing: border-box;
-    border-bottom: 1px solid #eaecef;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: #fff;
+	border-bottom: 1px solid #eaecef;
+	box-sizing: border-box;
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	padding: 0 2rem;
+	height: 56px;
+	z-index: 20;
 }
 
 .navbar-menu {
-    list-style: none;
-    display: flex;
+	display: flex;
+	list-style: none;
 }
 
 .navbar-menu li {
-    margin-right: 2rem;
+	margin-right: 2rem;
 }
 
 .navbar-menu li a {
-    color: #2c3e50;
-    text-decoration: none;
+	text-decoration: none;
+	color: #2c3e50;
 }
 
 .navbar-menu li a:hover,
 .navbar-menu li a.active {
-    border-bottom: 2px solid #3eaf7c;
+	border-bottom: 2px solid #3eaf7c;
 }
